--- a/templates/tmux.conf.j2
+++ b/templates/tmux.conf.j2
@@ -75,7 +75,9 @@ bind-key S command-prompt -p "Send pane to:" "join-pane -t :'%%'"
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
-set -g @plugin 'christoomey/vim-tmux-navigator'
+{% for plugin in tmux_plugins %}
+set -g @plugin '{{ plugin.namespace }}/{{ plugin.name }}'
+{% endfor %}
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
