--- a/templates/tmux.conf.j2
+++ b/templates/tmux.conf.j2
@@ -2,7 +2,7 @@ set  -g default-terminal "screen-256color"
 set  -g base-index      0
 setw -g pane-base-index 0
 # We need to set default-shell before calling new-session
-set  -g default-shell "{{ tmux_shell }}"
+set  -g default-shell "{{ tmux_shell_path }}"
 
 set -g status-keys vi
 set -g mode-keys   vi
